Fix firefox link break on lesson-plan

--- a/app/assets/stylesheets/components/_topics.scss
+++ b/app/assets/stylesheets/components/_topics.scss
@@ -76,7 +76,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     vertical-align: bottom;
-    white-space: nowrap;
+    word-break: break-all;
   }
 
   &__status,
